# luro-rs

./: .env  .gitignore  Cargo.toml  LICENSE  Nurah.md  README.md  Readme.md  SECURITY.md  TODO.md  The_Family.json  blaze.session.sql  config.toml  deps.txt  diesel.toml  message_create.rs  rustc-ice-2023-08-21T20:01:35.855339424Z-115457.txt  rustc-ice-2023-08-21T20:01:43.456376337Z-115516.txt  rustc-ice-2023-08-21T20:02:10.523965948Z-115677.txt  rustc-ice-2023-08-21T20:03:36.862107897Z-116359.txt  rustc-ice-2023-08-22T08:14:42.195930553Z-208886.txt  rustc-ice-2023-08-22T08:28:47.037936369Z-216402.txt  rustc-ice-2023-08-22T08:28:55.145498835Z-216594.txt  rustc-ice-2023-08-22T08:29:05.058215297Z-216795.txt  rustc-ice-2023-08-22T08:31:23.645765074Z-218633.txt  rustc-ice-2023-08-22T08:32:27.315538974Z-219070.txt  rustc-ice-2023-08-22T08:32:32.141094552Z-219247.txt  rustc-ice-2023-08-22T08:33:12.044940491Z-219762.txt  rustc-ice-2023-08-22T08:33:58.667345717Z-220125.txt  rustc-ice-2023-08-22T08:35:14.269877721Z-220741.txt  rustc-ice-2023-08-22T08:35:28.441885259Z-221010.txt  rustc-ice-2023-08-22T08:35:46.125014896Z-221384.txt  rustc-ice-2023-08-22T08:36:07.822180099Z-221662.txt  rustc-ice-2023-08-22T08:44:00.646272321Z-226459.txt  rustc-ice-2023-08-22T19:05:28.290458784Z-356974.txt  rustc-ice-2023-08-22T19:05:50.863569153Z-357157.txt  rustc-ice-2023-08-22T19:18:11.397995224Z-361406.txt  rustc-ice-2023-08-22T19:18:18.055489957Z-361465.txt  rustc-ice-2023-11-02T03:02:20.220645856Z-207442.txt  rustc-ice-2023-11-15T16:13:58.591773367Z-217705.txt  rustfmt.toml
lib/luro_commands/: Cargo.toml
lib/luro_commands/src/: commands.rs  lib.rs
lib/luro_core/: Cargo.toml
lib/luro_core/src/: config.rs  favorites.rs  favourites.rs  guild_settings.rs  heck.rs  lib.rs  quotes.rs  secrets.rs  stories.rs
lib/luro_dice/: Cargo.toml
lib/luro_dice/src/: api.rs  lib.rs
lib/luro_e621/: Cargo.toml
lib/luro_e621/src/: functions.rs  lib.rs
lib/luro_sled/: Cargo.toml
lib/luro_sled/src/: commands.rs  lib.rs
luro/: Cargo.toml  guild_settings.rs  luro.rs  quotes.rs
luro-builder/: Cargo.toml
luro-builder/src/: components.rs  embed.rs  lib.rs  message.rs  response.rs  timestamp.rs
luro-builder/src/components/: action_row.rs  button.rs  select_menu.rs  text_input.rs
luro-builder/src/embed/: embed_author.rs  embed_field.rs  embed_footer.rs  embed_image.rs  embed_provider.rs  embed_thumbnail.rs  embed_video.rs
luro-builder/src/response/: attachments.rs  choices.rs  components.rs  content.rs  custom_id.rs  embed.rs  response_type.rs
luro-database/: Cargo.toml
luro-database-cornucopia/: Cargo.toml
luro-database-cornucopia/queries/: guild_fetch.sql  marriage_update.sql  user_fetch.sql  user_update_twilight_user.sql
luro-database-cornucopia/src/: conversions.rs  cornucopia.rs  lib.rs
luro-database-cornucopia/src/driver/: mod.rs  user_fetch.rs  user_update.rs
luro-database-sqlx/: Cargo.toml
luro-database-sqlx/queries/: channel_update_twilight_channel.sql  marriage_update_approvals.sql  member_fetch.sql  message_fetch.sql  message_update.sql  message_update_twilight_message.sql  message_update_twilight_update.sql  messages_count_common_words.sql  messages_count_word_said.sql  messages_count_words.sql  messages_count_words_by_user.sql  messages_count_words_by_users.sql  user_count_total_words.sql  user_fetch_messages.sql
luro-database-sqlx/queries/character/: character_update.sql
luro-database-sqlx/queries/guild/: guild_fetch.sql  guild_update_data.sql
luro-database-sqlx/queries/guilds/: get_guilds.sql  update_guild.sql
luro-database-sqlx/queries/interaction/: interaction_fetch.sql
luro-database-sqlx/queries/luro_user/: get_luro_user.sql  (+1 more)
luro-database-sqlx/src/: driver.rs  lib.rs  types.rs
luro-database/src/: data.rs  database.rs  diesel.rs  drivers.rs  lib.rs  luro.rs  schema.rs  sqlx.rs  sync.rs  toml.rs  toml_driver.rs  types.rs
luro-derive/: Cargo.toml
luro-derive/src/: functions.rs  lib.rs  slash_command.rs
luro-dice/: Cargo.toml
luro-dice/src/: dice_roll.rs  filter_modifier.rs  lib.rs  roll_ast.rs  roll_options.rs  roll_parser.rs  roll_result.rs  roll_value.rs
luro-framework/: Cargo.toml
luro-framework/src/: argument.rs  builder.rs  character_proxy.rs  command.rs  command_interaction.rs  component_interaction.rs  context.rs  create_luro_command.rs  framework.rs  group.rs  hook.rs  interaction.rs  interaction_context.rs  interactions.rs  iter.rs  lib.rs  luro.rs  luro_command.rs  luro_context.rs  luro_framework.rs  luro_interaction.rs  modal.rs  modal_interaction.rs  parse.rs  parse_impl.rs  range.rs  responses.rs  slash_command.rs  standard_response.rs  traits.rs  wait.rs
luro-macros/: Cargo.toml
luro-macros/src/: after.rs  argument.rs  attr.rs  autocomplete.rs  before.rs  check.rs  command.rs  details.rs  error_handler.rs  hook.rs  lib.rs  modal.rs  optional.rs  parse.rs  util.rs
luro-model/: Cargo.toml
luro-model/src/: builders.rs  character_profile.rs  command.rs  configuration.rs  constants.rs  database.rs  database_driver.rs  dice_roll.rs  driver_sqlx.rs  driver_toml.rs  emote.rs  filter_modifier.rs  functions.rs  guild.rs  guild_permissions.rs  guild_setting.rs  heck.rs  legacy.rs  lib.rs  luro_command.rs  luro_database.rs  luro_database_driver.rs  luro_member.rs  luro_message.rs  luro_message_source.rs  luro_permissions.rs  luro_user.rs  member_roles.rs  message.rs  quote.rs  response.rs  role.rs  role_ordering.rs  roll.rs  roll_ast.rs  roll_options.rs  roll_parser.rs  roll_result.rs  roll_value.rs  slash_user.rs  (+9 more)
luro-response/: Cargo.toml
luro-response/src/: lib.rs
luro-responses/: Cargo.toml
luro-responses/src/: lib.rs
luro-twilight/: Cargo.toml
luro-twilight/src/: authored.rs  command.rs  commands.rs  context.rs  emote.rs  events.rs  interaction.rs  main.rs
luro/src/: builders.rs  commands.rs  embeds.rs  error.rs  event_handler.rs  framework.rs  functions.rs  guild.rs  hecks.rs  interaction.rs  interactions.rs  logging.rs  luro_command.rs  macros.rs  main.rs  models.rs  permissions.rs  responses.rs  slash.rs  traits.rs
(+2029 files in other folders)
