[workspace]
members = [
    "luro",
    "luro-dice",
    "luro-builder",
    "luro-database",
    "luro-model",
    "luro-response",
    "twilight-interactions",
    "twilight-interactions-derive",
]
resolver = "2"

[workspace.package]
authors = ["Nurah Wolfo <nurah@wolfo.tech>"]
categories = ["asynchronous"]
description = "A furry discord bot"
edition = "2021"
keywords = ["async", "twilight", "discord", "slash-command"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nurahwolf/luro-rs"
version = "0.0.1"

[workspace.dependencies]

# Project
luro = { path = "luro" }
luro-builder = { path = "luro-builder" }
luro-database = { path = "luro-database" }
luro-dice = { path = "luro-dice" }
luro-model = { path = "luro-model"}
luro-response = { path = "luro-response" }
twilight-interactions-derive = { path = "twilight-interactions-derive"}
twilight-interactions = { path = "twilight-interactions" }

# Legacy

anyhow = "1"
dashmap = "5"
serde = "1"
parking_lot = "0.12"
tracing-subscriber = "0.3.0"
tokio = { version = "1", default-features = false, features = [
    "sync",
    "rt-multi-thread",
    "fs",
] }
twilight-cache-inmemory = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-http = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-lavalink = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-util = { git = "https://github.com/twilight-rs/twilight.git", branch = "next", features = [
    "builder",
    "permission-calculator",
    "snowflake",
] }

rand = "0.8.0" # Used for luro-twilight, luro-model

# TODO: MOVE TO DATABASE
toml = "0.7"
tracing = "0.1"
hyper = "0.14.0"

[workspace.dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
