[workspace]
members = [
    "luro-database-sqlx",                # SQLx database driver, currently configured just for Postgres
    "luro-database",                # Core database driver, where shared functionality lives. Can be configured with several options, such as what drivers to use, caching and more.
    "luro-dice",
    "luro-framework",
    "luro-model",
    "luro-twilight",
    "twilight-interactions-derive",
    "twilight-interactions",
]
resolver = "2"

[workspace.package]
authors = ["Nurah Wolfo <nurah@wolfo.tech>"]
categories = ["asynchronous"]
description = "A furry discord bot"
edition = "2021"
keywords = ["async", "twilight", "discord", "slash-command"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nurahwolf/luro-rs"
version = "0.0.1"

[workspace.dependencies]
futures-util = "0.3" # Used for iterating over futures
time = { version = "0.3" } # Time handling library

# Legacy

anyhow = "1"
serde = "1"
tracing-subscriber = "0.3.0"
tokio = { version = "1", default-features = false, features = [
    "sync",
    "rt-multi-thread",
    "fs",
] }
twilight-cache-inmemory = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-http = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-lavalink = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-util = { git = "https://github.com/twilight-rs/twilight.git", branch = "next", features = [
    "builder",
    "permission-calculator",
    "snowflake",
] }

rand = "0.8.0" # Used for luro-twilight, luro-model

# TODO: MOVE TO DATABASE
toml = "0.7"
tracing = "0.1"
hyper = "0.14.0"
