[workspace]
members = [
    "luro",
    "luro-dice",
    "twilight-interactions-derive",
    "twilight-interactions",
]
resolver = "2"

[workspace.package]
authors = ["Nurah Wolfo <nurah@wolfo.tech>"]
categories = ["asynchronous"]
description = "A furry discord bot"
edition = "2021"
keywords = ["async", "twilight", "discord", "slash-command"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nurahwolf/luro-rs"
version = "0.0.1"

[workspace.dependencies]
# Twilight
twilight-http = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-lavalink = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-util = { git = "https://github.com/twilight-rs/twilight.git", branch = "next", features = [
    "builder",
    "permission-calculator",
    "snowflake",
] }
