[package]
name = "luro-builder"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging and errors
anyhow = { workspace = true }
tracing = { workspace = true }

# Luro Specific
luro-model = { path = "../luro-model", optional = true }
twilight-interactions = { path = "../twilight-interactions", optional = true }

# Twilight
twilight-model = { workspace = true }

[features]
default = ["luro-model", "auto-trim"]
luro-model = ["dep:luro-model", "dep:twilight-interactions"]
auto-trim = []