[package]
name = "luro-database-cornucopia"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Required
postgres-types = { version = "*", features = ["derive"] }

# Async
cornucopia_async = { version = "*", features = ["with-serde_json-1"] }
tokio = { workspace = true }
tokio-postgres = { version = "*", features = [
    "with-serde_json-1",
    "with-time-0_3",
] }
futures = "*"
# Async connection pooling
# deadpool-postgres = { version = "*" }

# Row serialization
serde = { version = "*", features = ["derive"] }

# Extra types
serde_json = "*"
time = "*"
uuid = "*"

# Errors
anyhow = { workspace = true }
tracing.workspace = true # Extra information for when its fucked

# Returned Models
luro-model.path = "../luro-model" # Models returned by the database
twilight-model.workspace = true # Interim models