[package]
name = "luro-database"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
twilight-http = { workspace = true } # Used for fetching data if not present in the selected database driver
twilight-util = { workspace = true } # Used for fetching data if not present in the selected database driver
twilight-cache-inmemory = { workspace = true, optional = true } # Can be enabled and used as a fallback

# Core
anyhow = { workspace = true }
futures-util = "0.3"
luro-model.path = "../luro-model"
twilight-model = { workspace = true }
time = { version = "0.3" }
tracing = { workspace = true }
serde ={ workspace = true }

# Cache

# Diesel
diesel = { version = "2.1.0", features = ["postgres", "serde_json", "64-column-tables"], optional = true }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"], optional = true }

# SQLx
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "json",
    "time",
    "uuid"
], optional = true }

# Toml
toml = { version = "0.8", optional = true }


# Default Features
[features]
default = ["sqlx-driver", "cache"]

## Database Options
diesel-driver = ["dep:diesel", "diesel-derive-enum"]
sqlx-driver = ["dep:sqlx"]
toml-driver = ["dep:toml"]

## Misc Features
cache = ["dep:twilight-cache-inmemory"] # Only used for allowing cached items be converted to database items. If not needed, disable this feature
