[package]
name = "luro-framework"
description = "Luro's framework, the core of the library. Uses features to control the database driver used and such"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
hyper = { workspace = true, optional = true }                   #framework
luro-model.path = "../luro-model"                               #framework
luro-database.path = "../luro-database"                               #framework
serde.workspace = true                                          #framework
tracing.workspace = true
tracing-subscriber.workspace = true                             #framework
twilight-cache-inmemory = { workspace = true, optional = true } #framework
twilight-gateway.workspace = true                               #framework
twilight-http.workspace = true                                  #framework
twilight-util.workspace = true                                  #framework
twilight-lavalink = { workspace = true, optional = true }       #framework
twilight-model.workspace = true                                 #framework
twilight-interactions.path = "../twilight-interactions"         # command

rand = { workspace = true, optional = true } # response/permission_not_bot_staff
async-trait = "0.1.73"

[features]
# Default Features
default = [
    "cache-memory",
    "http-client-hyper",
    # "lavalink", # Broken on twilight-lavalink
    "responses",
    "random-responses", # Disable this feature to get a fixed response,
]

## Misc
cache-memory = ["dep:twilight-cache-inmemory"]
http-client-hyper = ["dep:hyper"]
lavalink = ["dep:twilight-lavalink"]
luro-builder = []
responses = []
random-responses = ["dep:rand"]
