[package]
name = "luro-framework"
description = "Luro's framework, the core of the library. Uses features to control the database driver used and such"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true                                         # Error Context
hyper = { workspace = true, optional = true }                   # framework
luro-database.path = "../luro-database"                         # framework
luro-model.path = "../luro-model"                               # framework
luro-logging.path = "../luro-logging"   # framework
rand = { workspace = true, optional = true }                    # response/permission_not_bot_staff
tracing-subscriber.workspace = true                             # framework
tracing.workspace = true                                        # Detailed error information
twilight-gateway.workspace = true                               # framework
twilight-http.workspace = true                                  # framework
twilight-interactions.path = "../twilight-interactions"         # command
twilight-lavalink = { workspace = true, optional = true }       # framework
twilight-model.workspace = true                                 # framework
twilight-util.workspace = true                                  # framework

[features]
# Default Features
default = [
    "http-client-hyper",
    # "lavalink", # Broken on twilight-lavalink
    "random-responses", # Disable this feature to get a fixed response,
]

## Misc
http-client-hyper = ["dep:hyper"]
lavalink = ["dep:twilight-lavalink"]
luro-builder = []
random-responses = ["dep:rand"]
