[package]
name = "luro-macros"
version = "0.0.1"
authors = ["Nurah Wolfo <nurah@wolfo.tech>"]
edition = "2018"
description = "Procedural macros used by Luro"
readme = "README.md"
repository = "https://github.com/nurahwolf/luro-rs"
license = "MIT"
keywords = ["async", "twilight", "discord", "slash-command"]
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "1"