[package]
name = "luro-model"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Optional Dependencies
twilight-cache-inmemory = { git = "https://github.com/twilight-rs/twilight.git", branch = "next", optional = true } # Support twilight-cache-inmemory
toml = { version = "*", optional = true } # Allow loading configuration from a config file

anyhow.workspace = true
luro-logging.path = "../luro-logging"


dotenvy = { version = "0.15", optional = true }
nom = { version = "7", optional = true } # command/text_args
radix_trie = { version = "0.2", optional = true } # command
rand = { workspace = true, optional = true} # feature dice-roller
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
twilight-gateway.workspace = true
twilight-http.workspace = true
twilight-interactions.path = "../twilight-interactions"
twilight-model.workspace = true
twilight-util.workspace = true

## Sorted Dependencies
time.workspace = true # member_data
serde_json = { version = "*", optional = true } # Character Import - TupperBot

[features]
# Default Features
default = ["dice-roller", "luro-command", "lavalink", "auto-trim", "cache-memory", "builders", "dotenvy", "extra", "toml-configuration"]

toml-configuration = ["dep:toml"] # Enable to load configuration from file
twilight_cache = ["dep:twilight-cache-inmemory"] # Additional functionality build around twilight's caching crate

## Model Features
auto-trim = [] # Used to automatically trim message responses that are too big, sending as a file instead

## Misc Features
dotenvy = ["dep:dotenvy"] # Enable this feature to load from a .env file

## To investigate
builders = ["auto-trim"]
cache-memory = []
dice-roller = ["dep:rand"]
lavalink = [] # Enable this feature to have Luro respond to lavalink events
luro-command = ["dep:radix_trie", "dep:nom"]

extra = ["dep:serde_json"]