[package]
name = "luro-model"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
tracing = "0.1"                                               # Logs
thiserror = "1"                                               # Better crafted errors
time = "0.3"                                                  # Used for time related functionality
twilight-model.workspace = true                               # Interface with Twilight models
serde = "1.0.197"
futures-util.workspace = true
twilight-util.workspace = true
twilight-interactions = { path = "../twilight-interactions" }

# Optional Dependencies
tokio = { workspace = true, optional = true }
twilight-gateway = { workspace = true, optional = true }
toml = { version = "0.8", optional = true }              # Used for instancing the configuration
twilight-http = { workspace = true, optional = true }    # Twilight database driver
sqlx = { version = "0.7", optional = true }              # SQLx database driver

[features]
# Default and primary features
default = [
    "database-sync",
    "database-sqlx",
    "database-twilight",
    "builders",
    "responses",
    "config",
]

builders = [] # Utilities for building objects
config = ["dep:toml"]
responses = [] # Standard responses to common errors and situations
database-sync = [
    "dep:twilight-gateway",
] # Sync data from the gateway to the database driver

# Database drivers
database-twilight = ["dep:twilight-http", "dep:tokio"]
database-sqlx = [
    "dep:sqlx",
    "sqlx/runtime-tokio",
    "sqlx/postgres",
    "sqlx/json",
    "sqlx/time",
    "sqlx/uuid",
]
