[package]
name = "luro-response"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core
anyhow = { workspace = true }
tracing= { workspace = true}

# Luro
luro-builder = { workspace = true }
luro-model = { workspace = true }
