[package]
name = "luro-twilight"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core
dotenv = "0.15"               # main
anyhow = { workspace = true } # main

# Dependencies for commands
luro-dice = { path = "../luro-dice", optional = true } # command-dice
uwuify = { version = "0.2.0", optional = true }        # command-uwu
rand = { workspace = true, optional = true }           # command-story
git2 = { version = "0.18", optional = true }           # command-about
memory-stats = { version = "1", optional = true }      # command-about
base64 = { version = "0.21", optional = true }         # command-base64
serde = { workspace = true, optional = true }          # command-owner
toml = { version = "*", optional = true }              # command-info
twilight-util = { workspace = true, optional = true }  # command-info


# Tokio
tokio.workspace = true # main
futures-util = "0.3"   # main

# Luro - Specify the driver using the feature setting below
luro-model.path = "../luro-model"         # main
luro-framework.path = "../luro-framework"
luro-database.path = "../luro-database"



# Tracing
tracing = { workspace = true }            # main
tracing-appender = "0.2"                  # main
tracing-subscriber = { workspace = true } # main

# Twilight
twilight-http = { workspace = true }                    # commands
twilight-model = { workspace = true }                   # event_listener
twilight-gateway.workspace = true                       # main
twilight-interactions.path = "../twilight-interactions" # commands
async-trait = "0.1.73"
dotenvy = "0.15.7"

# Optional Features
tabled = { version = "0.14", optional = true }

[features]
# Main Features
default = ["commands", "pretty-tables"]
commands = [
    "command-about",
    "command-base64",
    "command-character",
    "command-dice",
    "command-moderator",
    "command-owner",
    "command-roles",
    "command-ping",
    "command-quote",
    "command-say",
    "command-story",
    "command-uwu",
    "command-marry",
    "command-wordcount",
    "command-info",
]

## Luro Features
pretty-tables = ["dep:tabled"] # As the name implies, enable pretty table output!

# Commands
command-about = ["dep:git2", "dep:memory-stats"]
command-base64 = ["dep:base64"]
command-character = []
command-dice = ["dep:luro-dice"]
command-roles = []
command-marry = []
command-quote = []
command-ping = []
command-moderator = []
command-owner = ["dep:serde"]
command-say = []
command-story = ["dep:rand"]
command-uwu = []
command-info = ["dep:toml", "dep:twilight-util"]
command-wordcount = ["dep:uwuify"]
