[package]
name = "luro-twilight"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core
anyhow = { workspace = true } # main

# Dependencies for commands
base64 = { version = "0.21", optional = true }         # command-base64
git2 = { version = "0.18", optional = true }           # command-about
luro-dice = { path = "../luro-dice", optional = true } # command-dice
memory-stats = { version = "1", optional = true }      # command-about
rand = { workspace = true, optional = true }           # command-story
serde = { workspace = true, optional = true }          # command-owner
toml = { version = "*", optional = true }              # command-info
twilight-lavalink = { workspace = true, optional = true }  # command-music
hyper = { workspace = true, optional = true }  # command-music
serde_json = { version = "*", optional = true }  # command-music
twilight-util = { workspace = true, optional = true }  # command-info
uwuify = { version = "0.2.0", optional = true }        # command-uwu
regex = { version = "*" } # command-info-message



# Tokio
tokio.workspace = true # main
futures-util = { workspace = true }   # main

# Luro - Specify the driver using the feature setting below
luro-model.path = "../luro-model"         # main
luro-framework.path = "../luro-framework"
luro-database.path = "../luro-database"
luro-logging.path = "../luro-logging"


# Tracing
tracing = { workspace = true }            # main
tracing-appender = "0.2"                  # main
tracing-subscriber = { workspace = true } # main

# Twilight
twilight-http = { workspace = true }                    # commands
twilight-model = { workspace = true }                   # event_listener
twilight-gateway.workspace = true                       # main
twilight-interactions.path = "../twilight-interactions" # commands
dotenvy = "0.15.7"

# Optional Features
tabled = { version = "0.14", optional = true }
thousands = "0.2.0"
console-subscriber = "0.2.0"

[features]
# Main Features
default = ["commands", "pretty-tables"]
commands = [
    "command-about",
    "command-base64",
    "command-boop",
    "command-character",
    "command-dice",
    "command-info",
    "command-marry",
    "command-moderator",
    # "command-music", # Broken on twilight-lavalink
    "command-muzzle",
    "command-hello",
    "command-images",
    "command-owner",
    "command-ping",
    "command-quote",
    "command-roles",
    "command-say",
    "command-story",
    "command-uwu",
    "command-user",
    "command-wordcount", # TODO: New database
]

## Luro Features
pretty-tables = ["dep:tabled"] # As the name implies, enable pretty table output!

# Commands
command-about = ["dep:git2", "dep:memory-stats"]
command-base64 = ["dep:base64"]
command-boop = []
command-character = []
command-dice = ["dep:luro-dice"]
command-hello = []
command-images = []
command-info = ["dep:toml", "dep:twilight-util"]
command-marry = []
command-moderator = []
command-music = ["dep:twilight-lavalink", "dep:hyper", "dep:serde_json"]
command-muzzle = []
command-owner = ["dep:serde"]
command-ping = []
command-quote = []
command-roles = []
command-say = []
command-user = []
command-story = ["dep:rand"]
command-uwu = ["dep:uwuify"]
command-wordcount = []
