[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "luro-twilight"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Luro Specific
luro-model = { path = "../luro-model" }
luro-database = { path = "../luro-database" }
luro-builder = { path = "../luro-builder" }


# Core
async-trait = "0.1"
tokio = { workspace = true }

# Twilight Specific
twilight-cache-inmemory = { workspace = true }
twilight-gateway = { workspace = true }
twilight-http = { workspace = true }
twilight-lavalink = { workspace = true }
twilight-model = { workspace = true }
twilight-util = { workspace = true }

# Twilight third party
twilight-interactions = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-appender = "0.2.2"
tracing-subscriber = { workspace = true }

# Others
parking_lot = { workspace = true }
futures-util = "0.3.28"
anyhow = { workspace = true }
hyper = { workspace = true }
serde_json = "1.0.102"
serde = { workspace = true }
toml = { workspace = true }
rand = "0.8.5"
git2 = "0.17.2"
memory-stats = "1.1.0"
base64 = "0.21.2"
regex = "1.9.1"
dotenv = "0.15.0"
uwuify = "0.2.2"
dashmap = { workspace = true }

[dev-dependencies]
futures = "0.3"
tokio = { workspace = true }

[features]
default = ["toml-driver"]
toml-driver = []
