[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "luro"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Commands
luro-dice = { path = "../luro-dice", optional = true }








# Luro Specific
luro-model = { path = "../luro-model" }
luro-database = { path = "../luro-database" }
luro-builder = { path = "../luro-builder" }
luro-framework.path = "../luro-framework"
twilight-interactions.path = "../twilight-interactions"


# Core
tokio = { workspace = true }

# Twilight Specific
twilight-cache-inmemory = { workspace = true }
twilight-gateway = { workspace = true }
twilight-http = { workspace = true }
twilight-lavalink = { workspace = true }
twilight-model = { workspace = true }
twilight-util = { workspace = true }

# Twilight third party

# Tracing
tracing = { workspace = true }
tracing-appender = "0.2.2"
tracing-subscriber = { workspace = true }

# Others
futures-util = "0.3.28"
anyhow = { workspace = true }
hyper = { workspace = true }
serde_json = "1.0.102"
serde = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
git2 = "0.18"
memory-stats = "1.1.0"
base64 = "0.21.2"
regex = "1.9.1"
dotenv = "0.15.0"
uwuify = "0.2.2"

[dev-dependencies]
futures = "0.3"
tokio = { workspace = true }

[features]
# Core
default = ["toml-driver", "all-commands", "dice-roller", "luro-command", "lavalink", "auto-trim", "cache-memory"]
all-commands = ["command-dice"]
toml-driver = []
dice-roller = []
cache-memory = []
luro-command = []
lavalink = [] # Enable this feature to have Luro respond to lavalink events
auto-trim = [] # Used to automatically trim message responses that are too big, sending as a file instead

# Commands
command-dice = ["dep:luro-dice"]