[package]
name = "luro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "fs",
    "signal",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
twilight-http = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-lavalink = { git = "https://github.com/twilight-rs/twilight.git", branch = "next", optional = true }
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-util = { git = "https://github.com/twilight-rs/twilight.git", branch = "next", features = [
    "builder",
    "permission-calculator",
    "snowflake",
] }
futures-util = "0.3"
fastrand = "*"
toml = "0.8"
serde = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1"

# Optional dependencies
base64 = { version = "0.22", optional = true }
console-subscriber = { version = "0.2", optional = true }
git2 = { version = "0.18", optional = true }
luro-dice = { path = "../luro-dice", optional = true }
memory-stats = { version = "1", optional = true }
sqlx = { version = "0.7", optional = true }
time = "0.3.32"
tokio-console = { version = "0.1", optional = true }
tracing-appender = { version = "0.2", optional = true }
twilight-interactions = { path = "../twilight-interactions", optional = true }
uwuify = { version = "0.2", optional = true }
thiserror = "1.0.57"

[features]
default = [
    "simple-logs",
    "database-sqlx",
    "module-ai",
    "module-interactions",
    "module-prefix",
]
#default = ["all-logs", "all-modules", "database-sqlx"]

# 'All' providers, allowing several features in one
all-logs = ["logs-tokio-console", "logs-stdout", "logs-file"]
simple-logs = ["logs-stdout", "logs-file"]
all-modules = [
    "module-ai",
    "module-interactions",
    "module-keywords",
    "module-prefix",
]

# Each individual command and it's dependencies, if external
command-about = ["dep:git2", "dep:memory-stats"]
command-ban = []
command-base64 = ["dep:base64"]
command-boop = []
command-hello = []
command-character = []
command-dice = ["dep:luro-dice"]
command-uwu = ["dep:uwuify"]
command-owner = []

# Database drivers
database-sqlx = [
    "dep:sqlx",
    "sqlx/runtime-tokio",
    "sqlx/postgres",
    "sqlx/json",
    "sqlx/time",
    "sqlx/uuid",
]

# Each module that can be toggled
module-ai = []
module-interactions = [
    "dep:twilight-interactions",
    "command-about",
    "command-ban",
    "command-base64",
    "command-boop",
    "command-dice",
    "command-uwu",
    "command-hello",
    "command-owner",
]
module-keywords = []
module-prefix = []

# Log providers
logs-tokio-console = ["dep:console-subscriber"]
logs-stdout = ["dep:tracing-appender"]
logs-file = ["dep:tracing-appender"]
